# EVB

./: .gitignore  README  README.md  environment-plumed.yml  environment.kemp-evb.yml  environment.yml  nohup.out  pyproject.toml
benchmarks/: baseline_toy_cpu_legacy.json  baseline_toy_cuda_legacy.json  evb_energy_decomposition_report.md  generic_refactor_report.md  hg317_gap_metad_benchmark.yaml  hg317_gap_metad_cuda_decomposed.json  hg317_gap_metad_cuda_legacy.json  hg317_gap_umbrella_benchmark.yaml  hg317_gap_umbrella_cuda_decomposed.json  hg317_gap_umbrella_cuda_legacy.json  hg317_gap_umbrella_cuda_mixed_decomposed_singlepoint.json  hg317_gap_umbrella_cuda_mixed_legacy_singlepoint.json  hg317_plain_cuda_mixed_decomposed_singlepoint.json  hg317_plain_cuda_mixed_legacy_singlepoint.json  hg317_qregion_computable_report.md  hg317_qregion_gxtb_calibrated_report.md  hg317_qregion_reproduction_report.md  hg317_qregion_stability_report.md  native_gap_bias_hg317_cuda.json  native_gap_bias_report.md  native_gap_bias_toy_cpu.json  native_gap_bias_toy_cuda.json  q_region_bonded_mapping_toy_cpu.json  q_region_bonded_mapping_toy_cuda.json  q_region_evb_report.md  q_region_toy_cpu.json  q_region_toy_cuda.json  refactor_hg317_cuda_accuracy.json  refactor_hg317_cuda_decomposed.json  refactor_hg317_cuda_decomposed_singlepoint.json  refactor_hg317_cuda_legacy.json  refactor_hg317_cuda_legacy_singlepoint.json  refactor_toy_cpu_decomposed.json  refactor_toy_cpu_legacy.json  refactor_toy_cuda_decomposed.json  refactor_toy_cuda_legacy.json  toy_legacy_decomposed_accuracy.json
(+2674 files in other folders)
