[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kemp-evb"
version = "0.1.0"
description = "Proof-of-concept 2-state EVB driver for Kemp eliminase in OpenMM"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI Codex"}]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
openmm = ["openmm>=8.1"]
test = ["pytest>=8.0"]

[project.scripts]
kemp-evb = "kemp_evb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
